Correct z-index transferring.

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -116,6 +116,7 @@ $iconWidth: 50px;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 100;
     .panel-modal-body {
         padding: 60px 20px 0 20px;
         color: white;
